# vlm_basic_classifier

./: .gitignore  README.md  basic_classifier.py  clip_finetune.py  output_clipfinetune.txt  plotter.py  pyproject.toml
