[project]
name = "vlm-basic-classifier"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "pandas>=2.0.0",
]

# ------------------------------------------------------------
# PyTorch with CUDA (optional — uncomment and set your CUDA
# version, e.g. cu121 or cu118).  Without this, uv will pull
# the CPU-only wheels from PyPI.
#
# [[tool.uv.index]]
# name = "pytorch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# explicit = true
#
# [tool.uv.sources]
# torch = [{ index = "pytorch-cu121" }]
# torchvision = [{ index = "pytorch-cu121" }]
# ------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
